<resources>
    <string name="app_name" translatable="false">Treble Checker</string>
    <string name="treble" translatable="false">Treble</string>
    <string name="checker" translatable="false">Checker</string>
    <string name="project_treble" translatable="false">Project Treble</string>
    <string name="status">Status</string>
    <string name="compatible">Compatible</string>
    <string name="not_compatible">Not compatible</string>
    <string name="vndk_version">VNDK version</string>
    <string name="more_info">More info</string>
    <string name="a_b_partitioning">A/B partitioning</string>
    <string name="supported">Supported</string>
    <string name="not_supported">Not supported</string>
    <string name="seamless_updates">Seamless update</string>
    <string name="lite">lite</string>
    <string name="legacy">Legacy</string>
    <string name="treble_arch">Treble arch</string>
    <string name="latest_typology">Latest typology</string>
    <string name="virtual_a_b_partitioning">Supported, in a virtual way</string>
    <string name="legacy_a_b_partitioning">Supported, in a traditional way</string>
    <string name="system_as_root">System-as-root</string>
    <string name="mounted_like_system_as_root">Mounted as system-as-root</string>
    <string name="mounted_like_device_as_root">Mounted as device-as-root</string>
    <string name="mounted_like_system_on_block">Mounted as system-on-block</string>
    <string name="project_treble_description">\"Project Treble\" is a Google initiative aimed at making Android updates more immediate when a new version comes out. Project Treble is based on separating Android files from those strictly related to the device (vendor). Having the files necessary for the correct functioning of the device always safe in / vendor, it is possible to start generic Android images, broadly compatible with all devices: the GSI.</string>
    <string name="method">Method</string>
    <string name="general">General</string>
    <string name="chipset">Chipset</string>
    <string name="memory">Memory</string>
    <string name="identifier">Identifier</string>
    <string name="display_resolution">Resolution</string>
    <string name="battery">Battery</string>
    <string name="processor">CPU</string>
    <string name="graphic_card">GPU</string>
    <string name="architecture">Arch</string>
    <string name="ram" translatable="false">RAM</string>
    <string name="intenal_memory">Internal memory</string>
    <string name="external_memory">External memory</string>
    <string name="display">Display</string>
    <string name="dpi">DPI</string>
    <string name="size">Size</string>
    <string name="refresh_rate">Refresh rate</string>
    <string name="version">Version</string>
    <string name="api_21_required">API >= 21 required</string>
    <string name="api_18_required">API >= 18 required</string>
    <string name="not_mounted">Not mounted</string>
    <string name="grammatical_particle_of">of</string>
    <string name="compatible_but_hidden">Compatible, but hidden</string>
    <string name="superuser">Superuser</string>
    <string name="superuser_description">\"Superuser\" (or simply \"root\") is the system user who has administrator privileges. With root you have full control of your device, for example you can uninstall the pre-installed apps, you can change the device interface or other deeper changes to your liking.</string>
    <string name="busybox" translatable="false">BusyBox</string>
    <string name="busybox_description">BusyBox is a sort of Linux \"Swiss Army Knife\", in fact it contains in a small executable many Linux utilities (called \"applets\").</string>
    <string name="a_b_partitioning_description">A/B partitioning ensures that you always have a functioning boot partition during an over-the-air (OTA) upgrade. In this way, the chances of having a device not working due to an unsuccessful update are drastically reduced. The main advantages of this system are:\n• possibility for the user to use the system even during the update (it will only be necessary to reboot to change partitions)\n• in case of an error during the update, the device will reboot again and return to the working partition</string>
    <string name="available">Available</string>
    <string name="not_available">Not available</string>
    <string name="root_permissions">Root permissions</string>
    <string name="root_path">Root path</string>
    <string name="no_root_path_found">No root path found</string>
    <string name="not_installed">Not installed</string>
    <string name="present">Supported</string>
    <string name="build_date">Build date</string>
    <string name="not_found">Not found</string>
    <string name="menu">Menu</string>
    <string name="settings">Settings</string>
    <string name="tools">Tools</string>
    <string name="methods">Methods</string>
    <string name="customization">Personalization</string>
    <string name="battery_summary">Choose how you want to get battery information. Keep in mind that the experimental methods is more accurate but may not work on all devices (%s)</string>
    <string name="classic">Old, but g(old)</string>
    <string name="experimental">Experimental</string>
    <string name="information">Information</string>
    <string name="github" translatable="false">Github</string>
    <string name="github_summary">This project is open-source: it means that the source code is visible to everyone and that anyone can contribute to it.</string>
    <string name="identifier_summary">Choose in which order to show your device model. E.g. %s</string>
    <string name="processor_summary">Choose how to display the name of your device\'s processor. E.g. %s</string>
    <string name="developer">Developer</string>
    <string name="developer_summary" translatable="false">Gabriele Cappellaro</string>
    <string name="error_report_this_please">Error! Report this bug, please</string>
    <string name="available_in_next_updates">This feature is not yet available but will be in a future update. Stay up to date!</string>
    <string name="contact_us">Contact us</string>
    <string name="contact_us_summary">If you encounter a problem and want to report it, or if you want to suggest something to add, you can do it directly from here.</string>
    <string name="contact_us_message">Write down here what you want to communicate (it\'s a problem you\'re having or function that you think should be added). Remember, every report is anonymous in full respect of your privacy.</string>
    <string name="contact_us_hint">Type your message here…</string>

    <string-array name="battery_entries">
        <item>@string/classic</item>
        <item>@string/experimental</item>
    </string-array>
    <string name="feedback_sent">Your message was sent successfully, thanks you so much!</string>
</resources>